--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,9 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=go-project
+sonar.projectKey=ThalesGabriel_Teste-Sonarcloud
+sonar.organization=thalesgabriel
+
+sonar.projectName=Teste-Sonarcloud
+sonar.projectVersion=1.0
 
 sonar.sources=.
 sonar.exclusions=**/*_test.go
